@@ -73,7 +73,7 @@ class ProjectionUI
         canvas = new ProjectionCanvas(model, view);
         //The image canvas is always at the bottom of the pile.
         //layeredPane.setLayout(new BorderLayout(0, 0));
-        layeredPane.add(canvas, new Integer(0));
+        layeredPane.add(canvas, Integer.valueOf(0));
     }
     
 	/** Builds and lays out the GUI. */
@@ -157,7 +157,7 @@ class ProjectionUI
      */
     void addComponentToLayer(JComponent c)
     {
-        layeredPane.add(c, new Integer(1));
+        layeredPane.add(c, Integer.valueOf(1));
     }
     
     /**
