@@ -148,14 +148,15 @@ class TreeViewerWin
         tabs.setForeground(UIUtilities.STEELBLUE);
 
         Map browsers = model.getBrowsers();
-        Browser browser = (Browser) browsers.get(new Integer(
+        Browser browser = (Browser) browsers.get(Integer.valueOf(
                                             Browser.PROJECT_EXPLORER));
         if (browser.isDisplayed())
             tabs.addTab(browser.getTitle(), browser.getIcon(), browser.getUI());
-        browser = (Browser) browsers.get(new Integer(Browser.TAGS_EXPLORER));
+        browser = (Browser) browsers.get(Integer.valueOf(Browser.TAGS_EXPLORER));
         if (browser.isDisplayed())
             tabs.addTab(browser.getTitle(), browser.getIcon(), browser.getUI());
-        browser = (Browser) browsers.get(new Integer(Browser.IMAGES_EXPLORER));
+        browser = (Browser) browsers.get(
+        		Integer.valueOf(Browser.IMAGES_EXPLORER));
         if (browser.isDisplayed())
             tabs.addTab(browser.getTitle(), browser.getIcon(), browser.getUI());
     }
@@ -230,30 +231,34 @@ class TreeViewerWin
         menu.setMnemonic(KeyEvent.VK_V);
         JCheckBoxMenuItem item = new JCheckBoxMenuItem();
         Map browsers = model.getBrowsers();
-        Browser browser = (Browser) browsers.get(new Integer(
+        Browser browser = (Browser) browsers.get(Integer.valueOf(
                                             Browser.PROJECT_EXPLORER));
         item.setSelected(browser.isDisplayed());
         item.setAction(
                 controller.getAction(TreeViewerControl.HIERARCHY_EXPLORER));
         menu.add(item);
         item = new JCheckBoxMenuItem();
-        browser = (Browser) browsers.get(new Integer(Browser.SCREENS_EXPLORER));
+        browser = (Browser) browsers.get(
+        		Integer.valueOf(Browser.SCREENS_EXPLORER));
         item.setSelected(browser.isDisplayed());
         item.setAction(controller.getAction(
         		TreeViewerControl.SCREENS_EXPLORER));
         //menu.add(item);
         item = new JCheckBoxMenuItem();
-        browser = (Browser) browsers.get(new Integer(Browser.TAGS_EXPLORER));
+        browser = (Browser) browsers.get(
+        		Integer.valueOf(Browser.TAGS_EXPLORER));
         item.setSelected(browser.isDisplayed());
         item.setAction(controller.getAction(TreeViewerControl.TAGS_EXPLORER));
         menu.add(item);
         item = new JCheckBoxMenuItem();
-        browser = (Browser) browsers.get(new Integer(Browser.IMAGES_EXPLORER));
+        browser = (Browser) browsers.get(
+        		Integer.valueOf(Browser.IMAGES_EXPLORER));
         item.setSelected(browser.isDisplayed());
         item.setAction(controller.getAction(TreeViewerControl.IMAGES_EXPLORER));
         menu.add(item);
         item = new JCheckBoxMenuItem();
-        browser = (Browser) browsers.get(new Integer(Browser.FILES_EXPLORER));
+        browser = (Browser) browsers.get(
+        		Integer.valueOf(Browser.FILES_EXPLORER));
         item.setSelected(browser.isDisplayed());
         item.setAction(controller.getAction(TreeViewerControl.FILES_EXPLORER));
         menu.add(item);
